FIX : smaller alphabet buttons on small screens (teachers)

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -288,6 +288,12 @@ footer li {
         margin-left: 0;
     }
 
+    #alphabet button {
+        padding: .25rem .5rem;
+        font-size: .875rem;
+        border-radius: .2rem;
+    }
+
     /* Footer */
 
     footer {
